# ss-godot-shader-studio

./: .gitignore  .gitmodules  .release-please-manifest.json  .release-please-manifest.rc.json  CHANGELOG.md  README.md  ROADMAP.md  project.godot  release-please-config.json  release-please-config.rc.json
.github/workflows/: ci.yml  promote-release.yml  release.yml  validate-release-source.yml
addons/ss_godot_shader_studio/: CHANGELOG.md  plugin.cfg  plugin.gd  plugin.gd.uid
assets/shaders/: screen_green.generated.gdshader  screen_green.generated.gdshader.uid
docs/: addon-reference.md
docs/architecture/: development-plan.md  overview.md
docs/compiler/: pipeline.md
docs/examples/: extreme-validation.md  height-layered-material.md
docs/graph-format/: gshadergraph-spec.md
docs/node-authoring/: node-definition-spec.md
native/: CMakeLists.txt
native/src/compiler/: compile_result.h  emit_backend.h  emit_backend_spatial.cpp  emit_backend_spatial.h  shader_graph_compiler.cpp  shader_graph_compiler.h
native/src/core/: register_types.cpp  register_types.h
native/src/graph/: shader_domain.h  shader_graph_document.cpp  shader_graph_document.h  shader_graph_edge.cpp  shader_graph_edge.h  shader_graph_node_instance.cpp  shader_graph_node_instance.h
native/src/ir/: ir_builder.cpp  ir_builder.h  ir_graph.h  ir_node.h  ir_types.h
native/src/registry/: node_registry.cpp  node_registry.h  shader_node_definition.cpp  shader_node_definition.h
native/src/registry/stdlib/: stdlib_color.cpp  stdlib_color.h  stdlib_float_ops.cpp  stdlib_float_ops.h  stdlib_helpers.h  stdlib_input.cpp  stdlib_input.h  stdlib_math.cpp  stdlib_math.h  stdlib_output.cpp  stdlib_output.h  stdlib_parameters.cpp  stdlib_parameters.h  stdlib_registration.cpp  stdlib_registration.h  stdlib_swizzle.cpp  stdlib_swizzle.h  stdlib_texture.cpp  stdlib_texture.h  stdlib_trig.cpp  stdlib_trig.h  stdlib_uv.cpp  stdlib_uv.h  stdlib_vector.cpp  stdlib_vector.h
native/src/serializer/: graph_serializer.cpp  graph_serializer.h
native/src/types/: port_definition.h  shader_type.h  type_system.cpp  type_system.h
native/src/validation/: validation_engine.cpp  validation_engine.h  validation_issue.h  validation_result.h
shaders/: screen_green.generated.gdshader.uid  screen_green.gshadergraph  test.generated.gdshader.uid  test.gshadergraph
test/: runner.gd  runner.gd.uid  smoke_test_phase_a.gd  smoke_test_phase_a.gd.uid  smoke_test_phase_a.tscn
test/unit/: test_compiler.gd  (+17 more)
tools/: generate_extreme_examples.gd  generate_extreme_examples.gd.uid
(+113 files in other folders)
